# nevermore-controller

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.adoc  cmake-variants.yaml  install-klipper-module.bash  mypy.ini  pyrightconfig.json
.github/: FUNDING.yaml
cmake/: FreeRTOS_Kernel_import.cmake  GetGitRevisionDescription.cmake  GetGitRevisionDescription.cmake.in  configure_files.cmake
dev/: zmod4410.py
doc/: voc.adoc  wiring.adoc
klipper/: moonraker_update.txt  nevermore.py  requirements.txt
src/: binary_info.cpp  binary_info.cpp.in  btstack_config.h  config.cpp  config.hpp  display.cpp  display.hpp  gatt.cpp  gatt.hpp  led_status.cpp  led_status.hpp  main.cpp  nevermore.gatt  nevermore.gatt.in  sensors.cpp  sensors.hpp  settings.cpp  settings.hpp  stdio_usb.cpp  stdio_usb.h  ui.cpp  ui.hpp  usb_cdc_gatt.cpp  usb_cdc_gatt.hpp  usb_descriptors.c  ws2812.cpp  ws2812.hpp  ws2812.pio
src/config/: FreeRTOSConfig.h  lv_conf.h  pins.cpp  pins.hpp
src/config/boards/: fysetc_rp2040_touch_v1.h
src/config/lib/: FreeRTOSConfig.h  lv_conf.h  lv_drv_conf.h  tusb_config.h
src/config/pins/: custom.hpp  fysetc-rp2040-touch-v1.hpp  pico.hpp  pico_w.hpp  waveshare-rp2040-lcd-1.28.hpp  waveshare-rp2040-touch-lcd-1.28.hpp  waveshare-rp2040-zero.hpp  waveshare-touch-lcd-1.28.hpp
src/display/: gc9a01.cpp  gc9a01.hpp  lv_driver_interface.hpp
src/gatt/: characteristic_ids.hpp  configuration.cpp  configuration.hpp  cooler.cpp  cooler.hpp  device_info.cpp  device_info.hpp  display.cpp  display.hpp  environmental.cpp  environmental.hpp  fan.cpp  fan.hpp  handler_helpers.hpp  neopixel.cpp  neopixel.hpp  photocatalytic.cpp  photocatalytic.hpp  servo.cpp  servo.hpp  ws2812.cpp  ws2812.hpp
src/lib/: bme280.c  bme280.h  bme280_defs.h  bme68x.c  bme68x.h  bme68x_defs.h  bmp280.c  bmp280.h  bmp280_defs.h  fix16.gdb.py  pio_i2c.cpp  pio_i2c.h  pio_i2c.pio  sensirion_gas_index_algorithm.c  sensirion_gas_index_algorithm.h
src/sdk/: async.hpp  ble_data_types.hpp  bt_data_types.hpp  btstack.hpp  gap.hpp  i2c.cpp  i2c.hpp  i2c_hw.cpp  i2c_hw.hpp  i2c_pio.cpp  i2c_pio.hpp  pwm.cpp  pwm.hpp  spi.hpp  task.hpp  timer.hpp
src/sensors/: ahtxx.cpp  ahtxx.hpp  async_sensor.cpp  async_sensor.hpp  bme280.cpp  bme280.hpp  bme68x.cpp  bme68x.hpp  bmp280.cpp  bmp280.hpp  cst816s.cpp  cst816s.hpp  ens16x.cpp  ens16x.hpp  environmental.hpp  environmental_i2c.hpp  gas_index.cpp  gas_index.hpp  gas_index_ble.cpp  gas_index_ble.hpp  htu2xd.cpp  htu2xd.hpp  sgp30.cpp  sgp30.hpp  sgp40.cpp  sgp40.hpp  sht4x.cpp  sht4x.hpp  tachometer.hpp  zmod4410.cpp  zmod4410.hpp
src/ui/: CMakeLists.txt  common.h  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/ui/circle_240/: ui.cpp  ui.hpp  ui_classic.c  ui_no_plot.c  ui_small_plot.c
src/ui/circle_240_classic/: ui.cpp  ui.hpp  ui_Main.c
src/ui/components/: ui_comp_hook.c
src/ui/screens/: ui_Main.c
src/utility/: align.hpp  async_worker.hpp  bt_advert.hpp  container_misc.hpp  crc.hpp  cyw43_timer.hpp  dbg_time_waves.hpp  fan_policy.cpp  fan_policy.hpp  fan_policy_thermal.hpp  format.hpp  humidity.hpp  i2c.cpp  i2c.hpp  i2c_device.hpp  misc.hpp  numeric_suffixes.hpp  packed_tuple.hpp  periodic_waves.hpp  pid.hpp  profile.hpp  scope_guard.hpp  sensirion_gas_index_algorithm.h  servo.cpp  servo.hpp  square_wave.cpp  square_wave.hpp  task.hpp  template_string_literal.hpp  timer.hpp
tools/: .gitignore  dbg-graphite-logger.py  dev-cp-build-loop.sh  dev-dbus-stats.py  dev-squareline-studio-refresh-ids.py  nevermore_tool_utilities.py  nevermore_utilities.py  pin-config.py  requirements.txt  setup-tool-env.bash  update_ota.py
tools/sensorium/: .gitignore  CMakeLists.txt  graphite-logger.py  readme.adoc
tools/sensorium/src/: FreeRTOS.h  config.hpp  gatt.cpp  gatt.hpp  main.cpp  semphr.h  sensorium.gatt.in  sensors.cpp  sensors.hpp  task.h
tools/sensorium/src/sensors/: ags10.cpp  ags10.hpp  base.hpp  sgp30.cpp  sgp30.hpp  sgp40.cpp  sgp40.hpp  sht4x.cpp  sht4x.hpp  zmod4410.cpp  zmod4410.hpp
tools/sensorium/src/utility/: i2c_pins.cpp  i2c_pins.hpp
ui-project/: .gitignore  circle-240-classic.sll  circle-240-classic.spj  circle-240.sll  circle-240.spj  nevermore.sll  nevermore.spj
